<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    android:background="@drawable/bg_grad"
    tools:context=".RegisterActivity">

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@mipmap/ic_launcher"
        android:contentDescription="@string/app_name"
        android:layout_marginBottom="32dp"/>

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorPrimaryDark"
        android:background="@drawable/edit_text_background"
        android:padding="12dp"
        android:layout_marginBottom="16dp" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/colorPrimaryDark"
        android:background="@drawable/edit_text_background"
        android:padding="12dp"
        android:layout_marginBottom="32dp" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:textColor="@android:color/white"
        android:background="@drawable/button_background"
        android:textAllCaps="false"
        android:elevation="4dp"
        android:padding="12dp" />

</LinearLayout>

