<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_grad">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_picture"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_launcher_background"
        android:scaleType="centerCrop"
            />


        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/bio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bio_goes_here"
            android:textSize="14sp"
            android:layout_marginTop="4dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="12dp">

            <Button
                android:id="@+id/follow_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/follow1"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/message_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send_message"
                android:layout_marginStart="16dp"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/posts_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"/>
    </LinearLayout>



<ProgressBar
android:id="@+id/loading_indicator"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_centerInParent="true"
android:visibility="gone" />

    </RelativeLayout>

