<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_grad"
    tools:context=".ProfileActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <!-- Rest of your content here -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">


                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_profile_photo"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/profile_photo" />

                <Button
                    android:id="@+id/btn_upload_photo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorGradientEnd"
                    android:text="@string/upload_photo" />

                <!-- Display Name TextInputLayout -->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_display_name"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/display_name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_display_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName" />

                </com.google.android.material.textfield.TextInputLayout>

                <!-- Email TextInputLayout -->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_email"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Email"
                    app:endIconMode="clear_text">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress" />

                </com.google.android.material.textfield.TextInputLayout>



                <!-- Password TextInputLayout -->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_password"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/new_password"
                    app:endIconMode="password_toggle">


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>

                <!-- Update Profile Button -->
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_update_profile"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/update_profile"
                    android:textColor="#090909"
                    app:backgroundTint="#CCCACA"
                    app:cornerRadius="8dp"
                    app:strokeColor="#050505" />

                <!-- Change Password Button -->
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_change_password"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/change_password"
                    android:textColor="#050505"
                    app:backgroundTint="#CBC9C9"
                    app:cornerRadius="8dp"
                    app:strokeColor="#101010" />

                <!-- Logout Button -->
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_logout"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/log_out"
                    android:textColor="#0C0C0C"
                    app:backgroundTint="#CAC8C8"
                    app:cornerRadius="8dp"
                    app:strokeColor="#100F0F" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/lang"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/language"
                        android:textSize="25dp" />

                    <Spinner
                        android:id="@+id/langspin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:layout_marginTop="20dp"
                        android:backgroundTint="#EAEAEA">

                    </Spinner>

                    <ImageButton
                        android:id="@+id/imageButton"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginTop="15dp"
                        android:layout_weight="1"
                        android:background="@color/colorGradientEnd"
                        android:src="@drawable/baseline_refresh_24" />
                </LinearLayout>

            </LinearLayout>



        </androidx.core.widget.NestedScrollView>

        <!-- Navigation Bar -->
        <LinearLayout
            android:id="@+id/navigation_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/colorGradientEnd"

            android:divider="?android:dividerHorizontal"
            android:dividerPadding="8dp"
            android:orientation="horizontal"
            android:showDividers="middle">

            <!-- Home Button -->
            <ImageButton
                android:id="@+id/btn_home"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/colorGradientStart"
                android:src="@drawable/ic_home" />

            <!-- Search Button -->
            <ImageButton
                android:id="@+id/searchButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/colorGradientStart"
                android:src="@drawable/ic_search" />

            <!-- Post Button -->
            <ImageButton
                android:id="@+id/btn_post"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/colorGradientStart"
                android:src="@drawable/ic_post" />

            <!-- Profile Button -->
            <ImageButton
                android:id="@+id/btn_open_profile"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/colorGradientStart"
                android:src="@drawable/profile" />


        </LinearLayout>

    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
