<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_grad">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="20dp"
        app:cardCornerRadius="20dp"
        app:cardBackgroundColor="@color/cardview_dark_background">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <EditText
                android:id="@+id/bmiL"
                android:layout_width="120dp"
                android:layout_height="70dp"
                android:layout_marginRight="-80dp"
                android:layout_toStartOf="@+id/bmiButt"
                android:layout_marginBottom="8dp"
                android:layout_above="@+id/bmiButt"
                android:background="@color/cardview_light_background"
                android:lines="1"
                android:inputType="numberDecimal"
                android:textAlignment="center"
                android:textSize="50dp"
                android:hint="0">

            </EditText>

            <EditText
                android:id="@+id/bmiR"
                android:layout_width="120dp"
                android:layout_height="70dp"
                android:layout_marginLeft="-80dp"
                android:layout_toEndOf="@+id/bmiButt"
                android:layout_marginBottom="8dp"
                android:layout_above="@+id/bmiButt"
                android:background="@color/cardview_light_background"
                android:lines="1"
                android:inputType="numberDecimal"
                android:textAlignment="center"
                android:textSize="50dp"
                android:hint="0">

            </EditText>

            <TextView
                android:id="@+id/bmiText"
                android:layout_width="120dp"
                android:layout_height="70dp"
                android:layout_below="@+id/bmiButt"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"
                android:background="@color/cardview_light_background"
                android:lines="1"
                android:textSize="50dp"></TextView>

            <TextView
                android:id="@+id/bmit"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/bmiButt"
                android:layout_marginBottom="100dp"
                android:layout_marginHorizontal="100dp"
                android:text="@string/bmi"
                android:textSize="30dp"
                android:textAlignment="center">
            </TextView>

            <TextView
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_alignBottom="@+id/bmiL"
                android:layout_toRightOf="@+id/bmiL"
                android:layout_marginBottom="100dp"
                android:layout_marginLeft="-60dp"
                android:text="@string/height"
                android:textSize="30dp"
                android:textAlignment="center">
            </TextView>

            <TextView
                android:layout_width="180dp"
                android:layout_height="50dp"
                android:layout_alignBottom="@+id/bmiL"
                android:layout_toRightOf="@+id/bmiL"
                android:layout_marginBottom="100dp"
                android:layout_marginLeft="100dp"
                android:text="@string/weight"
                android:textSize="30dp"
                android:textAlignment="center">
            </TextView>

            <Button
                android:id="@+id/bmiButt"
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/calculate">

            </Button>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>



</RelativeLayout>
